--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   http: ^1.1.0
   dio: ^5.3.2
   
+  # XML parsing for WMTS capabilities
+  xml: ^6.5.0
+  
   # Real-time NTRIP/WebSocket connections
   web_socket_channel: ^2.4.0
   socket_io_client: ^2.0.3
